--- a/index.html
+++ b/index.html
@@ -9,6 +9,20 @@
 
 </head>
 <body>
-    <h1>teste</h1>
+    <div id="login-container">
+        <h1>Login</h1>
+        <form action="">
+            <label for="email">E-mail</label>
+            <input type="email" name="email" id="email" placeholder="Digite seu email..." autocomplete="off">
+            <label for="password">Senha</label>
+            <input type="password" name="password" id="password" placeholder="Digite sua senha">
+            <a href="#" id="forgot-pass">Esqueceu sua senha?</a>
+            <input type="submit" value="Login">
+        </form>
+
+    </div>
+
+
+
 </body>
 </html>
