--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
             <p>Ou entre pelas suas redes sociais</p>
             <i class="fa fa-facebook-f"></i>
             <i class="fa fa-linkedin"></i>
+            <i class="fa fa-twitter"></i>
+            <i class="fa fa-twitch"></i>
         </div>
         <div id="register-container">
             <p>Ainda não tem um conta?</p>
