--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Tela Login</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="shortcut icon" href="img/login_icon_176905.ico" type="image/x-icon">
 </head>
 
 <body>
